# esp-viewer

./: .gitignore  CLAUDE.md  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c  stream_pipeline.c  stream_pipeline.h  udm_cert.pem
main/services/: config_cache.c  config_cache.h  device_token.c  device_token.h  setup_mode.c  setup_mode.h  sse_client.c  sse_client.h  time_sync.c  time_sync.h  unifix_client.c  unifix_client.h  unifix_config.c  unifix_config.h  wifi_config.c  wifi_config.h
main/ui/: idle_mode_mgr.c  idle_mode_mgr.h  lucide_22.c  lucide_22.h  lucide_88.c  lucide_88.h  montserrat_14.c  montserrat_14.h  montserrat_140.c  montserrat_140.h  montserrat_18.c  montserrat_18.h  montserrat_200.c  montserrat_200.h  montserrat_22.c  montserrat_22.h  scr_idle.c  scr_idle.h  scr_loading.c  scr_loading.h  scr_ringing.c  scr_ringing.h  scr_screensaver.c  scr_screensaver.h  scr_settings.c  scr_settings.h  toast.c  toast.h  ui_animations.c  ui_animations.h  ui_icons.c  ui_icons.h  ui_tokens.h
tools/: provision-esp.py
