idf_component_register(SRCS "main.c" "stream_pipeline.c"
                            "services/device_token.c"
                            "services/wifi_config.c"
                            "services/setup_mode.c"
                            "services/unifix_client.c"
                            "services/sse_client.c"
                            "services/config_cache.c"
                            "services/unifix_config.c"
                            "services/time_sync.c"
                            "ui/ui_animations.c"
                            "ui/lucide_22.c"
                            "ui/lucide_88.c"
                            "ui/montserrat_14.c"
                            "ui/montserrat_18.c"
                            "ui/montserrat_22.c"
                            "ui/montserrat_200.c"
                            "ui/toast.c"
                            "ui/scr_loading.c"
                            "ui/scr_idle.c"
                            "ui/scr_ringing.c"
                            "ui/scr_settings.c"
                            "ui/scr_screensaver.c"
                            "ui/idle_mode_mgr.c"
                       INCLUDE_DIRS "."
                       PRIV_REQUIRES nvs_flash esp_wifi esp_netif esp_event esp32_p4_function_ev_board bsp_extra lvgl__lvgl espressif__esp_lvgl_port esp_driver_jpeg esp_lcd esp_timer lwip esp_driver_uart esp_http_client json)
